force-app/main/default/objects/CPQ_Multiplier_Table__c/CPQ_Multiplier_Table__c.object-meta.xml
<CustomObject>
    <label>Multiplier Table</label>
    <nameField>
        <displayFormat>MT-{0000000000}</displayFormat>
        <label>Multiplier Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multiplier Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>