force-app/main/default/objects/CPQ_Multiplier_Table__c/fields/CPQ_Active_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Active_As_Of_Date__c</fullName>
    <description>Timestamp of change to the multiplier</description>
    <label>Active As Of Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>