force-app/main/default/objects/CPQ_Multiplier_Table__c/fields/CPQ_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Multiplier__c</fullName>
    <description>The new multiplier rate to be applied</description>
    <label>Multiplier</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>