force-app/main/default/objects/CPQ_Multiplier_Table__c/fields/CPQ_Multiplier_Category__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Multiplier_Category__c</fullName>
    <description>Identify the category of multiplier</description>
    <label>Multiplier Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub-Category</fullName>
            </value>
            <value>
                <fullName>Add Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>