force-app/main/default/objects/CPQ_Multiplier_Table__c/fields/CPQ_Multiplier_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Multiplier_Type__c</fullName>
    <label>Multiplier Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CPQ_Multiplier_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Care</fullName>
            </value>
            <value>
                <fullName>Air Quality</fullName>
            </value>
            <value>
                <fullName>Auto-Product Rentals</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Fixture Cleaning</fullName>
            </value>
            <value>
                <fullName>Hand Sanitizer</fullName>
            </value>
            <value>
                <fullName>Linen</fullName>
            </value>
            <value>
                <fullName>Lotions and Soap</fullName>
            </value>
            <value>
                <fullName>Mat</fullName>
            </value>
            <value>
                <fullName>Mop Rental</fullName>
            </value>
            <value>
                <fullName>Hygiene Other</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Restorative</fullName>
            </value>
            <value>
                <fullName>Sanitary Disposal</fullName>
            </value>
            <value>
                <fullName>Sanitary Napkin/Tampon Vending</fullName>
            </value>
            <value>
                <fullName>Toilet Seat Cleaner</fullName>
            </value>
            <value>
                <fullName>Urinal &amp; Toilet Hygiene</fullName>
            </value>
            <value>
                <fullName>Urinal Screen &amp; AntiSplash</fullName>
            </value>
            <value>
                <fullName>Customer Adds</fullName>
            </value>
            <value>
                <fullName>Location Adds</fullName>
            </value>
            <value>
                <fullName>LOB Adds</fullName>
            </value>
            <value>
                <fullName>Sub-Category Adds</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>