force-app/main/default/objects/CPQ_Multiplier_Table__c/validationRules/CPQ_Validate_Multiplier.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Validate_Multiplier</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CPQ_Multiplier__c &lt; 0 || CPQ_Multiplier__c &gt; 10, true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Multiplier__c</errorDisplayField>
    <errorMessage>Multiplier must be between 0 and 10</errorMessage>
</ValidationRule>