force-app/main/default/objects/CPQ_Multiplier_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Multiplier_Type__c</columns>
    <columns>CPQ_Multiplier_Category__c</columns>
    <columns>CPQ_Multiplier__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CPQ_Active_As_Of_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>